CloudService/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudservice
  namespace: cs-app-cust1004-tools
  labels:
    app: cloudservice
spec:
  selector:
    app: cloudservice
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
